--- a/static/scss/_layout.scss
+++ b/static/scss/_layout.scss
@@ -6,6 +6,10 @@ html {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
 }
 
 body {
