--- a/templates/pages/logreg.html
+++ b/templates/pages/logreg.html
@@ -7,12 +7,12 @@
 <div class="container-fluid logreg-wrapper">
 
 
-    <div class="row justify-content-center">
+    <div class="row form-row justify-content-center align-items-center">
 
         <!-- Create centered jumbotron -->
 
         <div class="jumbotron form-jumbo">
-            <div class="col-12 jumbo-content">
+            <div class="col-12 jumbo-content mx-auto">
 
                 <!-- Create separate login and register tabs. -->
 
@@ -73,10 +73,13 @@
                             <div class="form-group">
                                 <label class="logreg-label" for="newUsername">Username</label>
 
+                                <!-- Username input form contains a pattern which enforces that usernames must only contain letters from
+                                a-z, A-Z, numbers from 0-9, and hyphens. They must also be between 3 and 20 letters long. -->
+
                                 <input type="text" class="form-control" name="username" id="newUsername"
                                     pattern="[a-zA-Z0-9\-]{3,20}" required>
 
-                                    <p><small>* Usernames must be unique and must contain no special characters other than hyphens.</small></p>
+                                    <p><small>* Usernames must be unique and must contain no special characters other than hyphens. Please choose a username between 3 and 20 characters in length.</small></p>
                             </div>
                             <div class="form-group">
                                 <label class="logreg-label" for="loginPassword">Password</label>
@@ -86,7 +89,7 @@
 
                             <!-- Registration Submit Button -->
 
-                            <button type="submit" class="btn btn-primary btn-large logreg-btn">Register</button>
+                            <button type="submit" class="btn btn-primary btn-large logreg-btn my-auto">Register</button>
 
                         </form>
 
