Add link to register tab from hero button.

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="col-12 d-block" id="btn-div">
 
-                <a href="#" class="btn btn-primary btn-large" id="hero-btn">Sign up!</a>
+                <a href="{{url_for('register', _anchor = 'register-tab')}}" class="btn btn-primary btn-large" id="hero-btn">Sign up!</a>
 
             </div>
 
