Add email field to register form. Start on login logic.

--- a/templates/pages/logreg.html
+++ b/templates/pages/logreg.html
@@ -86,7 +86,7 @@
 
                             <div class="form-group">
                                 <label class="logreg-label" for="loginEmail">E-Mail</label>
-                                <input type="email" class="email" name="email" id="newEmail"
+                                <input type="email" class="form-control" name="email" id="newEmail"
                                     placeholder="myemail@email.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="email addresses must follow standard email pattern"
                                     required>
                             </div>
