--- a/static/css/main.css
+++ b/static/css/main.css
@@ -999,7 +999,8 @@ ul ul a {
   color: #fff !important;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75);
   -webkit-font-smoothing: antialiased;
-  margin-left: 25%;
+  margin-left: 35%;
+  margin-top: 2rem;
 }
 
 .logreg-btn:hover {
