--- a/templates/pages/logreg.html
+++ b/templates/pages/logreg.html
@@ -42,21 +42,21 @@
 
                         <!-- Login Form -->
 
-                        <form id="loginform">
+                        <form id="loginform" method="POST" action="{{url_for('login')}}">
 
                             <div class="form-group">
                                 <label class="logreg-label" for="loginUsername">Username</label>
-                                <input type="text" class="form-control" id="loginUsername" required>
+                                <input type="text" class="form-control" id="loginUsername" name="username" required>
                             </div>
                             <div class="form-group">
                                 <label class="logreg-label" for="loginPassword">Password</label>
-                                <input type="password" class="form-control" id="loginPassword" placeholder="Password"
+                                <input type="password" class="form-control" name="password" id="loginPassword" placeholder="Password"
                                     required>
                             </div>
 
                             <!-- Login Button  -->
 
-                            <button type="submit" class="btn btn-primary btn-large logreg-btn">Log in</button>
+                            <button type="submit" class="btn btn-primary btn-large logreg-btn my-auto" name="btn" value="login">Login</button>
                         </form>
 
                     </div>
@@ -85,14 +85,14 @@
                             <!-- E-Mail input form. Pattern enforces that emails must contain characters, followed by an @, followed by more characters and a full-stop. -->
 
                             <div class="form-group">
-                                <label class="logreg-label" for="loginEmail">E-Mail</label>
+                                <label class="logreg-label" for="newEmail">E-Mail</label>
                                 <input type="email" class="form-control" name="email" id="newEmail"
                                     placeholder="myemail@email.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="email addresses must follow standard email pattern"
                                     required>
                             </div>
 
                             <div class="form-group">
-                                <label class="logreg-label" for="loginPassword">Password</label>
+                                <label class="logreg-label" for="newPassword">Password</label>
                                 <input type="password" class="form-control" name="password" id="newPassword"
                                     placeholder="Password" pattern="[a-zA-Z0-9\-]{6,}" title="allow passwords with minimum 6 characters"
                                     required>
