--- a/static/scss/_layout.scss
+++ b/static/scss/_layout.scss
@@ -162,3 +162,11 @@ col-4 {
 ul {
     margin: 0;
 }
+
+.message {
+    color: $pink;
+    font-size: 1.4em;
+    font-weight: 700;
+    margin-top: 2rem;
+    margin-left: 1.5rem;
+}
