--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -53,8 +53,8 @@
     <!-- Navigation -->
 
     {% include 'layouts/nav.html' %}
-
-    {% include 'components/message.html' %}
+    <div class="col-12 flash-msg-box"> {% include 'components/message.html' %}
+    </div>
 
     <!-- Add page content  -->
 
