--- a/templates/layouts/nav.html
+++ b/templates/layouts/nav.html
@@ -48,7 +48,7 @@
                 </li>
 
                 <li class="nav-item" id="navLogReg">
-                    <a class="nav-link hvr-bounce-in" href="{{url_for('logreg')}}" id="navLogRegLink">Login/Register</a>
+                    <a class="nav-link hvr-bounce-in" href="{{url_for('login')}}" id="navLogRegLink">Login/Register</a>
                 </li>
             </ul>
         </div>
