--- a/static/scss/_layout.scss
+++ b/static/scss/_layout.scss
@@ -163,10 +163,13 @@ ul {
     margin: 0;
 }
 
-.message {
+.error > .message {
     color: $pink;
     font-size: 1.4em;
     font-weight: 700;
-    margin-top: 2rem;
-    margin-left: 1.5rem;
+}
+
+.flashes {
+    margin-right: 1em;
+    margin-top: 1em;
 }
