--- a/templates/pages/logreg.html
+++ b/templates/pages/logreg.html
@@ -114,8 +114,9 @@
 
                     </div>
 
-                    <!-- Box to display flashed messages. -->
-
+                    <!-- Display flashed messages. -->
+                    
+                    {% include 'components/message.html' %}
 
                 </div>
             </div>
