--- a/static/scss/_base.scss
+++ b/static/scss/_base.scss
@@ -1,4 +1,4 @@
-// This SCSS file contains the variables used throughout the project.
+// This SCSS file contains the variables used throughout the project, as well as some reuseable mixins.
 
 
 //Colors
