--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -4,5 +4,6 @@
 @import "_about.scss";
 @import "_search.scss";
 @import "_logreg.scss";
+@import "_myprofile.scss";
 
 // For comments on some of the thought processes behind the CSS, please look at main.css.
