--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -22,8 +22,8 @@
                 </div>
             </div>
 
-            <!-- If the user is logged in, they see a prominently placed "Sign up!" button.
-            If they are not logged in, the text is replaced by "My Account". -->
+            <!-- If the user is logged in they see a prominently placed "Sign up!" button.
+            If they are not logged in, the button text is replaced by "My Account". -->
 
             {% if loggedIn != True %}
             <div class="col-12 d-block" id="btn-div">
