--- a/templates/pages/myprofile.html
+++ b/templates/pages/myprofile.html
@@ -5,8 +5,26 @@
 <div class="container-fluid myprofile-wrapper">
 
     <div class="row welcome-row justify-content-center align-items-center">
-        <h1>Welcome, {{username}}</h1>
+        <div class="col-12">
+            <h1>Welcome, {{username}}</h1>
+        </div>
+
+
+        <div class="col-12 page-header-box">
+            <h1 class="page-header">My Profile</h1>
+        </div>
+
     </div>
+
+    <form id="profile-form">
+
+        
+
+    </form>
+
+
+
+
 
 </div>
 
