--- a/static/css/main.css
+++ b/static/css/main.css
@@ -410,12 +410,13 @@ ul {
 #btn-div {
   position: absolute;
   top: 72%;
-  left: 33%;
+  left: 37%;
 }
 
 @media (min-width: 768px) {
   #btn-div {
-    left: 42%;
+    top: 60%;
+    left: 45%;
   }
 }
 
